--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <!-- Camera trigger -->
       <button id="take-photo">Take a picture</button>
 
-        <button id="grayscale" onclick="addClass(0)">Grayscale</button>
-        <button id="sepia" onclick="addClass(1)">Sepia</button>
-        <button id="blur" onclick="addClass(2)">Blur</button>
+        <button id="grayscale" onclick="addFilter(0)">Grayscale</button>
+        <button id="sepia" onclick="addFilter(1)">Sepia</button>
+        <button id="blur" onclick="addFilter(2)">Blur</button>
 
     </main>
   <script src="js/functions.js"></script>
